# ask_table

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/.text2sql_cache_eval_final_e2e/: schema_vectors.json
backend/.text2sql_cache_eval_llm_mysql/: schema_vectors.json
backend/alembic/: env.py
backend/alembic/versions/: 361a4f441bbe_create_core_metadata_tables.py
backend/examples/: domain_profile.yaml  eval_cases.jsonl  few_shot_seed.jsonl  schema_metadata.yaml
backend/examples/ecommerce/: eval_cases.jsonl  eval_cases_fixed_tables.jsonl  eval_cases_holdout.jsonl  eval_cases_multidim_unbiased.jsonl  eval_cases_multidim_unbiased_execution_report.md  eval_cases_table_retrieval.jsonl  eval_multidim_unbiased_baseline_e2e.json  eval_multidim_unbiased_baseline_fixed_tables.json  eval_multidim_unbiased_baseline_retrieval.json  eval_multidim_unbiased_boost2_retrieval.json  eval_multidim_unbiased_boost2_top8_retrieval.json  eval_multidim_unbiased_explicit_retrieval.json  eval_multidim_unbiased_final_analysis.md  eval_multidim_unbiased_final_e2e.json  eval_multidim_unbiased_final_fixed_tables.json  eval_multidim_unbiased_final_retrieval.json  eval_multidim_unbiased_final_top8_retrieval.json  eval_multidim_unbiased_inventory_templates_e2e.json  eval_multidim_unbiased_inventory_templates_fixed_tables.json  eval_multidim_unbiased_llm_mysql_analysis.md  eval_multidim_unbiased_llm_mysql_e2e.json  eval_multidim_unbiased_llm_mysql_e2e.json.checkpoint.json  eval_multidim_unbiased_pathbonus_retrieval.json  (+18 more)
backend/scripts/: gen_holdout_expected.py
backend/tests/: test_api_endpoints.py  test_api_errors.py  test_config.py  test_context_and_clarification.py  test_domain_profile.py  test_ecommerce_data.py  test_ecommerce_fewshot.py  test_ecommerce_semantics.py  test_embeddings.py  test_eval_case_repository.py  test_eval_metrics.py  test_eval_modes.py  test_eval_persistence.py  test_eval_report_analysis.py  test_eval_tracing.py  test_few_shot.py  test_history_repository.py  test_observability.py  test_package_layout.py  test_persistence_models.py  test_rate_limit.py  test_retrieval.py  test_retrieval_semantics.py  test_schema_semantics.py  test_sql_generation.py  test_workflow_and_eval.py  test_workflow_repository_e2e.py
(+109 files in other folders)
