[project]
name = "enterprise-text2sql"
version = "0.1.0"
description = "Enterprise Text2SQL intelligent data Q&A backend with hybrid retrieval, graph workflow, SSE streaming, and evaluation tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "jieba>=0.42.1",
  "rank-bm25>=0.2.2",
  "faiss-cpu>=1.8.0",
  "neo4j>=5.20.0",
  "dashscope>=1.20.0",
  "langfuse>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0",
  "alembic>=1.13.0",
  "pymysql>=1.1.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
text2sql-eval = "text2sql.eval:main"
text2sql-sample-db = "text2sql.core.sample_data:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# 全仓模块统一采用「from __future__ import annotations 在前、模块 docstring 在后」的写法，
# 该写法会让其后的 import 触发 E402；这是既有一致风格，统一忽略而非逐文件改写（surgical）。
ignore = ["E402"]

